--- a/_posts/2025-02-06-测试5.md
+++ b/_posts/2025-02-06-测试5.md
@@ -270,7 +270,7 @@ $$\left(a_1 \pm b_1\right) - \left(a_2 \pm b_2\right) = \left(a_1 - a_2\right) \
 </div>
 ##### **证明**
 <div class="color-block color-block--FireBrick">
-任取正整数$i,j$满足$0 < j < i < p$，那么$\gcd\left(p,i - j\right) = 1,\gcd\left(p,\left(i - j\right)a\right) = 1$，可以得到$ia$与$ja$模$p$不等。考察乘积$1a \cdot 2a \cdots \left(p - 1\right)a$，由于它们模$p$余数两两不等，于是它们关于$p$的余数遍历模$p$的完全剩余系，即
+任取正整数$i,j$满足$0 < j < i < p$，那么$\gcd\left(p,i - j\right) = 1,\gcd\left(p,\left(i - j\right)a\right) = 1$，可以得到$ia$与$ja$模$p$不等。考察乘积$1a \cdot 2a \cdots \left(p - 1\right)a$，由于它们模$p$余数两两不等，于是它们关于$p$的余数遍历模$p$的简化剩余系，即
 $$1a \cdot 2a \cdots \left(p - 1\right)a \equiv 1 \cdot 2 \cdots \left(p - 1\right) \mod p$$
 这表明$p \mid \left[1 \cdot 2 \cdots \left(p - 1\right) \cdot \left(a^{p - 1} - 1\right)\right]$，根据$\gcd\left(p,1 \cdot 2 \cdots \left(p - 1\right)\right) = 1$得到$p \mid a^{p - 1} - 1$，定理得证。
 </div>
@@ -326,7 +326,7 @@ $$\Delta \left(a_0x + a_1\right) = a, \quad \Delta^2 \left(a_0x^2 + a_1x + a_2\r
 </div>
 ##### **证明**
 <div class="color-block color-block--FireBrick">
-考察方程$ab \equiv 1 \mod p$，对于它的解$\left(a_0,b_0\right)$，可以知道$\left(a_0 + mp,b_0 + np\right)$也是方程的解，其中$m,n$是整数。所以在模$p$的完全剩余系中讨论即可。如果$a \equiv b \mod p$，那么$p \mid a^2 - 1$，可以得到$a \equiv \pm 1 \mod p$。显然，这个的逆否命题给出$a \not\equiv \pm 1 \mod p \implies a \not\equiv b \mod p$。将模$p$的完全剩余系全部乘起来，则除了模$p$余$\pm 1$的元素，其他都两两匹配变为模$p$余$1$的值，最终得到$\left(p - 1\right)! \equiv -1 \mod p$。
+考察方程$ab \equiv 1 \mod p$，对于它的解$\left(a_0,b_0\right)$，可以知道$\left(a_0 + mp,b_0 + np\right)$也是方程的解，其中$m,n$是整数。所以在模$p$的简化剩余系中讨论即可。如果$a \equiv b \mod p$，那么$p \mid a^2 - 1$，可以得到$a \equiv \pm 1 \mod p$。显然，这个的逆否命题给出$a \not\equiv \pm 1 \mod p \implies a \not\equiv b \mod p$。将模$p$的简化剩余系全部乘起来，则除了模$p$余$\pm 1$的元素，其他都两两匹配变为模$p$余$1$的值，最终得到$\left(p - 1\right)! \equiv -1 \mod p$。
 </div>
 <br>
 #### **定理17**
@@ -347,7 +347,7 @@ $$\left[1 \cdot 2 \cdots \left(2k\right)\right]\left[\left(-2k\right) \cdot \lef
 这些都表明对这样的素数$p$，总可以找到$X^2 \equiv -1 \mod p$的整数解。
 <br>
 <br>
-由于$\left(X + mp\right)^2 \equiv X^2 \mod p$，所以在模$p$的完全剩余系中可以找到$X^2 \equiv -1 \mod p$的解$x$，其中$m$是整数。此时令$y = 1$，就能得到$x^2 + y^2 = Mp,M \in \mathbb Z_+$。由于$x \leqslant p - 1,y > 0$，可以得到$1 \leqslant M < p$。如果$M \geqslant 2$，根据
+由于$\left(X + mp\right)^2 \equiv X^2 \mod p$，所以在模$p$的简化剩余系中可以找到$X^2 \equiv -1 \mod p$的解$x$，其中$m$是整数。此时令$y = 1$，就能得到$x^2 + y^2 = Mp,M \in \mathbb Z_+$。由于$x \leqslant p - 1,y > 0$，可以得到$1 \leqslant M < p$。如果$M \geqslant 2$，根据
 $$\left(x^2 + y^2\right)\left(u^2 + v^2\right) = \left(xu + yv\right)^2 + \left(xv - yu\right)^2$$
 如果取$u \equiv x \mod M,v \equiv y \mod M$，那么$xu + yv \equiv x^2 + y^2 \equiv 0 \mod M,xv - yu \equiv xy - yx \equiv 0 \mod M$，再加上关系$u^2 + v^2 \equiv 0 \mod M$就可以将上式变为
 $$\frac{u^2 + v^2}{M}p = \frac{x^2 + y^2}{M}\frac{u^2 + v^2}{M} = \left(\frac{xu + yv}{M}\right)^2 + \left(\frac{xv - yu}{M}\right)^2, \quad \frac{u^2 + v^2}{M},\frac{xu + yv}{M},\frac{xv - yu}{M} \in \mathbb Z$$
@@ -357,6 +357,127 @@ $$M_1 = \frac{u^2 + v^2}{M} \leqslant \frac M 2 \leqslant M - 1$$
 $$\left(x,y,M\right) \xrightarrow{M \geqslant 2} \left(\left\lvert \frac{xu + yv}{M} \right\rvert,\left\lvert \frac{xv - yu}{M} \right\rvert,M_1\right)$$
 当$M = 1$时，如果还用下降法就会得到$u = v = 0$，不能给出更小的$M_1$。至此，定理得证。
 </div>
+
+## 第三节 2024.11.26
+视频地址：*[田野-初等数论-2024.11.26](https://www.bilibili.com/video/av113553314943312)*
+#### **命题18**
+<div class="color-block color-block--NavyBlue">
+整数$a$与素数$p$互素，方程$ab \equiv 1 \mod p$有解且在模$p$意义下唯一。
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+这算是对之前那个$\left(p - 1\right)! \equiv -1 \mod p$命题证明的一个补充。首先至少$a^{p - 2}$是方程的解，存在性得证。假设有两个解$b_1,b_2$，那么$b_1 \equiv b_1ab_2 \equiv b_2 \mod p$，唯一性得证。
+</div>
+##### *注4*
+<div class="color-block color-block--DarkGreen">
+再补一个证明。考虑$1a,2a,\cdots,\left(p - 1\right)a$中的$ia$和$ja$，其中$1 \leqslant j < i \leqslant p - 1$。由于$i - j \not\equiv 0 \mod p$，于是得到$\left(i - j\right)a \not\equiv 0 \mod p,ia \not\equiv ja \mod p$，说明它们两两模$p$不等，所以遍历模$p$简化剩余系。模$p$简化剩余系中有$1$，所以只要$ja \equiv 1 \mod p$，那么$j$就是方程的解。
+</div>
+<br>
+#### **定义4**
+<div class="color-block color-block--DarkGoldenrod">
+对与素数$p$互素的整数$a$，记方程$ab \equiv 1 \mod p$的解$b$为$a^{-1}$，它在模$p$意义下唯一。
+</div>
+<br>
+#### **定理19**
+<div class="color-block color-block--NavyBlue">
+存在与素数$p$互素的整数$a$使得集合$\left\{1,a,a^2,\cdots,a^{p - 2}\right\}$是模$p$简化剩余系。
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+考虑$p - 1$的素因子分解
+$$p - 1 = q_1^{m_1}q_2^{m_2}\cdots q_r^{m_r}$$
+假设$1 \leqslant i \leqslant r$，方程$X^{q_i^{m_i}} \equiv 1 \mod p$必有解因为至少$X$可以是$b^{q_1^{m_1}q_2^{m_2}\cdots q_{i - 1}^{m_{i - 1}}q_{i + 1}^{m_{i + 1}}\cdots q_r^{m_r}}$，其中$\gcd\left(p,b\right) = 1$。接下来，考虑上述方程的解是否满足$X^{q_i^{m_i - 1}} \equiv 1 \mod p$，直接代入上述的一个解到方程左侧得到
+$$\left(b^{q_1^{m_1}q_2^{m_2}\cdots q_{i - 1}^{m_{i - 1}}q_{i + 1}^{m_{i + 1}}\cdots q_r^{m_r}}\right)^{q_i^{m_i - 1}} = b^{\frac{p - 1}{q_i}}$$
+现在得到以下真命题：如果方程$X^{q_i^{m_i}} \equiv 1 \mod p$的所有解满足$X^{q_i^{m_i - 1}} \equiv 1 \mod p$，那么任意与$p$互素的整数$b$都满足$b^{\frac{p - 1}{q_i}} \equiv 1 \mod p$。 根据之前的引理，由于$\left(p - 1\right) / q_i < p - 1$，所以$b$不会都满足$b^{\frac{p - 1}{q_i}} \equiv 1 \mod p$。由上述命题的逆否命题得到，一定有方程$X^{q_i^{m_i}} \equiv 1 \mod p$的解不满足$X^{q_i^{m_i - 1}} \equiv 1 \mod p$，这样的解记为$a_i$。
+<br>
+<br>
+现在考虑$a = a_1a_2\cdots a_r$，如果集合$\left\{1,a,a^2,\cdots,a^{p - 2}\right\}$中有两个元素模$p$同余，比如$a^i \equiv a^j \mod p$，这里可以假设$i > j$，那么$1 \leqslant i - j \leqslant p - 2$。如果$p \mid a_i$，那么$a_i^{q_i^{m_i}} \equiv 0 \mod p$，所以根据逆否命题得到$p \nmid a_i$，进而$p \nmid a$。通过$a^j\left(a^{i - j} - 1\right) \equiv 0 \mod p$ 以及$p \nmid a$得到$a^{i - j} \equiv 1 \mod p$。注意到$a^{p - 1} \equiv 1 \mod p$，定义$d = \gcd\left(i - j,p - 1\right)$，存在整数$\alpha,\beta$使得$d = \alpha\left(i - j\right) + \beta\left(p - 1\right)$，那么
+$$a^d = \left(a^{i - j}\right)^\alpha \cdot \left(a^{p - 1}\right)^\beta \equiv 1 \mod p$$
+由于$d \mid p - 1$，所以$d$的素因子分解具有形式$q_1^{n_1}q_2^{n_2}\cdots q_r^{n_r}$，其中$0 \leqslant n_i \leqslant m_i,1 \leqslant i \leqslant r$，并且在$1 \leqslant i \leqslant r$中至少有一个$i$满足$n_i < m_i$。注意到
+$$a^{d\cdot\prod_{j \neq i}q_j^{m_j - n_j}} = \left(a_1a_2\cdots a_r\right)^{q_i^{n_i}\cdot\prod_{j \neq i}q_j^{m_j}} \equiv a_i^{q_i^{n_i}\cdot\prod_{j \neq i}q_j^{m_j}} \equiv 1 \mod p, \quad n_i \leqslant m_i - 1$$
+这里用到了$a_j^{q_j^{m_j}} \equiv 1 \mod p,1 \leqslant j \leqslant r$和$a^d \equiv 1 \mod p$。由于$q_i$和$\prod_{j \neq i}q_j^{m_j}$互素，存在整数$\gamma,\delta$使得
+$$\gamma q_i + \delta\prod_{j \neq i}q_j^{m_j} = 1 \implies \gamma q_i^{m_i} + \delta q_i^{m_i - 1 - n_i}\cdot q_i^{n_i}\cdot\prod_{j \neq i}q_j^{m_j} = q_i^{m_i - 1} \implies a_i^{q_i^{m_i - 1}} \equiv 1 \mod p$$
+这与$a_i$不满足$X^{q_i^{m_i - 1}} \equiv 1 \mod p$矛盾，于是集合$\left\{1,a,a^2,\cdots,a^{p - 2}\right\}$中的元素模$p$两两不同余，这个集合是模$p$的简化剩余系，定理得证。
+</div>
+
+## 第四节 2024.12.03
+视频地址：*[田野-初等数论-2024.12.03](https://www.bilibili.com/video/av113588328995449)*
+#### **定义5**
+<div class="color-block color-block--DarkGoldenrod">
+整数$a$与素数$p$互素，如果$d$是满足$a^d \equiv 1 \mod p$的最小正整数，则称$d$为$a$关于$p$的阶。
+</div>
+<br>
+#### **命题20**
+<div class="color-block color-block--NavyBlue">
+若$\gcd\left(a,p\right) = 1$，则$a$的阶整除$p - 1$。
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+由$a^{p - 1} \equiv 1 \mod p$知道$a$的阶一定存在。假设$d$是$a$关于$p$的阶，即$a^d \equiv 1 \mod p$，而$\gcd\left(d,p - 1\right)$可表示为$d$与$p - 1$的整系数线性组合，那么$a^{\gcd\left(d,p - 1\right)} \equiv 1 \mod p$。由$\gcd\left(d,p - 1\right) \mid d$得到$d = \gcd\left(d,p - 1\right)$，进而得到$d \mid p - 1$。
+</div>
+<br>
+#### **命题21**
+<div class="color-block color-block--NavyBlue">
+对素数$p$，若$p - 1 = q^m$，其中$q$是素数，$m$是整数。那么存在整数$a$使得$a$的阶为$p - 1$。
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+由以前的分析，一定存在方程$X^{q^m} \equiv 1 \mod p$的解不满足$X^{q^{m - 1}} \equiv 1 \mod p$，记这样的解为$a$。如果存在小于$m$的正整数$n$使得$a$的阶为$q^n$，那么$q^n \mid q^m$。但通过$n \leqslant m - 1$将得到$a^{q^{m - 1}} = a^{q^n\cdot q^{m - 1 - n}} \equiv 1 \mod p$，矛盾，于是此时$a$的阶为$q^m = p - 1$。
+</div>
+<br>
+#### **引理22**
+<div class="color-block color-block--NavyBlue">
+对素数$p$，整数$a,b$的阶为$m,n$，若$\gcd\left(m,n\right) = 1$，那么$ab$的阶为$mn$。
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+根据$\left(ab\right)^{mn} \equiv 1 \mod p$知道$ab$的阶整除$mn$，假设$ab$的阶为$m_1n_1$，其中$m_1 \mid m,n_1 \mid n$。通过
+$$\left(ab\right)^{m_1n} \equiv a^{m_1n} \equiv 1 \mod p, \quad \left(ab\right)^{mn_1} \equiv b^{mn_1} \equiv 1 \mod p$$
+得到$m \mid m_1n,n \mid mn_1$，利用$\gcd\left(m,n\right) = 1$得到$m \mid m_1,n \mid n_1$，所以$m_1 = m,n_1 = n$。
+</div>
+<br>
+#### **定理23**
+<div class="color-block color-block--NavyBlue">
+对素数$p$，存在整数$a$使得$a$的阶为$p - 1$。
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+这与之前的定理等价。对素因子分解$p - 1 = q_1^{m_1}q_2^{m_2}\cdots q_r^{m_r}$，存在整数$a_i$ 满足方程$X^{q_i^{m_i}} \equiv 1 \mod p$，但不满足方程$X^{q_i^{m_i - 1}} \equiv 1 \mod p$，它的阶为$q_i^{m_i}$。由于$a_1,a_2,\cdots,a_r$的阶两两互素，所以$a = a_1a_2\cdots a_r$的阶为$p - 1$。
+</div>
+<br>
+#### **定理24**
+<div class="color-block color-block--NavyBlue">
+对素数$p$，整数$b$与$p$互素，考虑方程
+$$x^m \equiv b \mod p$$
+其中$m$是正整数。令$d = \gcd\left(m,p - 1\right)$，有如下结论：
+<ol>
+<li> 方程有$d$个模$p$不同的解或方程无解。</li>
+<li> 方程有解当且仅当方程$x^d \equiv b \mod p$有解。</li>
+<li> 方程有解当且仅当$b^{\frac{p - 1}{d}} \equiv 1 \mod p$，其中满足的$b$在模$p$意义下有$\left(p - 1\right) / d$个。</li>
+</ol>
+</div>
+##### **证明**
+<div class="color-block color-block--FireBrick">
+存在整数$\alpha,\beta$使得$d = \alpha m + \beta\left(p - 1\right)$。当方程$x^d \equiv b \mod p$有解时，由于$p \nmid b$，所以$p \nmid x^d,p \nmid x$，有
+$$x^d = \left(x^\alpha\right)^m \cdot \left(x^{p - 1}\right)^\beta \equiv \left(x^\alpha\right)^m \mod p$$
+表明$x^\alpha$是方程$x^m \equiv b \mod p$的解。必然存在阶为$p - 1$的整数，记为$a$，模$p$的简化剩余系在模$p$意义下都可表示为$a^k$，其中$k$是整数。可以假设$x \equiv a^u \mod p,b \equiv a^v \mod p$。此时得到
+$$a^v\left(a^{um - v} - 1\right) \equiv 0 \mod p \implies a^{um - v} \equiv 1 \mod p \implies p - 1 \mid um - v \implies d \mid um - v \implies d \mid v$$
+如果$x^m \equiv b \mod p$有解，那么存在整数$a,\delta$使得$b \equiv a^{\delta d} \mod p$，其中$a$与$p$互素，此时$a^\delta$是$x^d \equiv b \mod p$的解。至此，定理的第二条得证。
+<br>
+<br>
+如果方程$x^d \equiv b \mod p$有解，根据
+$$x^{p - 1} \equiv \left(x^d\right)^{\frac{p - 1}{d}} \equiv b^{\frac{p - 1}{d}} \mod p$$
+能够得到$b^{\frac{p - 1}{d}} \equiv 1 \mod p$。如果$b^{\frac{p - 1}{d}} \equiv 1 \mod p$，那么继续之前的假设$b \equiv a^v \mod p$，得到$a^{v\frac{p - 1}{d}} \equiv 1 \mod p$，进而得到$d \mid v$，方程$x^d \equiv b \mod p$有解。定理第三条的前半部分得证。
+<br>
+<br>
+如果方程$x^m \equiv b \mod p$存在两个解$x_1,x_2$，它们满足$x_1^m \equiv x_2^m \mod p,\left(x_1^{-1}x_2\right)^m \equiv 1 \mod p$，这里的逆是前面定义过的数论倒数。于是模$p$意义下，方程$x^m \equiv 1 \mod p$解的数目就决定了方程$x^m \equiv b \mod p$解的数目。等效的，可以考虑方程$x^d \equiv 1 \mod p$解的数目，将$x$替换为$a^u$，这要求$p - 1 \mid ud,\frac{p - 1}{d} \mid u$。由于$a$的阶是$p - 1$，模$p$不同的解对应的$u$有$d$个。定理的第一条得证。
+<br>
+<br>
+同样的道理，方程$x^{\frac{p - 1}{d}} \equiv 1 \mod p$的解有$\frac{p - 1}{d}$个，定理第三条的后半部分得证。
+</div>
+
+## 第五节 2024.12.10
+视频地址：*[田野-初等数论-2024.12.10](https://www.bilibili.com/video/av113627856113842)*
 <br>
 <br>
 
@@ -365,3 +486,10 @@ $$\left(x,y,M\right) \xrightarrow{M \geqslant 2} \left(\left\lvert \frac{xu + yv
 
 <br>
 <br>
+
+<br>
+<br>
+
+<br>
+<br>
+
